@@ -1,3 +1,8 @@
+2009-09-29  Zoltan Varga  <vargaz@gmail.com>
+
+	* solaris_threads.c (GC_thr_daemon): Don't crash if GC_lookup_thread () returns
+	NULL.
+
 2009-09-25  Zoltan Varga  <vargaz@gmail.com>
 
 	* solaris_threads.c (GC_get_orig_stack_size): Remove the annoying 'Large stack
